--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ repositories {
 
 
 dependencies {
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.6'
+	compileOnly "org.projectlombok:lombok:1.16.12"
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
